# Music_Player

./: .gitignore  Cargo.toml  README.md  SongsList.json  music_list.json
src/: charge_songs.rs  example.rs  json_manager.rs  main.rs  playbacks.rs  player.rs  widgets.rs
