[package]
name = "Music_Player"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.3"
rodio = "0.21.1"
walkdir = "2"
lofty = "0.22.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.8"
clap = { version = "4.5.48", features = ["derive"] }
symphonia = "0.5.4"
