[package]
name = "Music_Player"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32.3"
rodio = "0.21.1"
walkdir = "2"
lofty = "0.22.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
image = { version = "0.25.8"}
clap = { version = "4.5.48", features = ["derive"] }
symphonia = "0.5.4"
rand = "0.9.2"
rfd = "0.16.0"
